read sectors by CHS ok

--- a/.bochsrc
+++ b/.bochsrc
@@ -2,4 +2,5 @@ config_interface: wx
 display_library: wx
 romimage: file=$BXSHARE/BIOS-bochs-latest
 vgaromimage: file=$BXSHARE/VGABIOS-lgpl-latest
-floppya: 1_44=floppy.img, status=inserted
+floppya: image="floppy.img", status=inserted
+ata0-master: type=disk, path="disk.img", mode=flat, cylinders=20, heads=16, spt=63
