--- a/.bochsrc
+++ b/.bochsrc
@@ -1,5 +1,4 @@
-config_interface: wx
-display_library: wx
+display_library: sdl, options="gui_debug"
 romimage: file=$BXSHARE/BIOS-bochs-latest
 vgaromimage: file=$BXSHARE/VGABIOS-lgpl-latest
 floppya: image="floppy.img", status=inserted
